# financial-data-extractor

./: .gitignore  README.md
.cursor/rules/: 00-fiscal-ai-master-rules.mdc  00-global.mdc  01-context7-doc.mdc  10-backend-fastapi.mdc  11-backend-celery.mdc  12-backend-db.mdc  13-api-design.mdc  20-frontend-nextjs-tailwind.mdc  21-ui.mdc  30-containerization.mdc  40-monitoring.mdc  50-testing-quality.mdc  60-documentation.mdc  70-pdf-processing.mdc  71-llm-extraction.mdc  72-financial-normalization.mdc
.github/workflows/: jekyll-gh-pages.yml
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  config.py  logging.json  pyproject.toml  run.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_create_initial_schema.py  002_seed_initial_companies.py
backend/app/: __init__.py  app_builder.py  lifespan.py
backend/app/api/middleware/: fastapi_error_handler.py  request_context.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  companies.py  compiled_statements.py  documents.py  extractions.py  tasks.py
backend/app/core/compilation/: __init__.py  compiler.py  restatement.py
backend/app/core/exceptions/: __init__.py  api_exceptions.py  custom_exceptions.py  db_exceptions.py  service_exceptions.py  translators.py
backend/app/core/llm/: __init__.py  client.py  extractor.py  models.py  prompts.py
backend/app/core/normalization/: __init__.py  normalizer.py  synonyms.py
backend/app/core/pdf/: __init__.py  extractor.py  preprocessor.py
backend/app/core/scraping/: __init__.py  service.py
backend/app/core/storage/: __init__.py  storage_service.py
backend/app/db/: __init__.py  base.py  dependencies.py
backend/app/db/models/: __init__.py  company.py  document.py  extraction.py
backend/app/db/repositories/: __init__.py  base.py  company.py  compiled_statement.py  document.py  extraction.py
backend/app/schemas/: __init__.py  company.py  document.py  extraction.py
backend/app/services/: __init__.py  company.py  compiled_statement.py  dependencies.py  document.py  extraction.py
backend/app/tasks/: __init__.py  celery_app.py  compilation_tasks.py  extraction_tasks.py  flower_config.py  metrics.py  orchestration_tasks.py  progress.py  scraping_tasks.py  utils.py
backend/app/utils/: file_utils.py  json_logger.py  log_filter.py  logger.py
backend/app/workers/: __init__.py  base.py  compilation_worker.py  extraction_worker.py  orchestration_worker.py  scraping_worker.py
backend/scripts/: db_manager.py  test_tasks.sh
backend/tests/integration/: conftest.py  test_companies_integration.py  test_workers.py
backend/tests/integration/app/: conftest.py
backend/tests/integration/services/: conftest.py  test_compilation_pipeline.py  test_pdf_extractor.py  test_scraping.py
backend/tests/integration/workers/: __init__.py  conftest.py  test_scraping_service.py
backend/tests/unit/api/: __init__.py  conftest.py  test_companies_endpoints.py  test_documents_endpoints.py  test_error_handler.py  test_extractions_endpoints.py  test_middleware.py
backend/tests/unit/core/: __init__.py  test_compiler.py  test_normalizer.py  test_restatement.py
backend/tests/unit/db/: __init__.py  test_models.py
backend/tests/unit/schemas/: __init__.py  test_schemas.py
backend/tests/unit/server/: test_app_builder.py  test_create_app.py  test_lifespan.py
backend/tests/unit/services/: __init__.py  conftest.py  test_company_service.py
backend/tests/unit/utils/: __init__.py  test_file_utils.py  test_log_filter.py
docs/: Gemfile  _config.yml  api-reference.md  backend-testing.md  database-migrations.md  database-queries.md  database-schema.md  frontend-architecture.md  frontend-devtools.md  frontend-testing.md  index.md  infrastructure-development.md  results.md  storage.md  task-processing.md  testing.md  video.md
docs/_includes/: footer_custom.html  head_custom.html  nav_footer_custom.html
frontend/: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  prettier.config.mjs  tsconfig.json
infrastructure/: Makefile  README.md
(+115 files in other folders)
